--- a/src/components/Basket/index.css
+++ b/src/components/Basket/index.css
@@ -18,6 +18,7 @@
 }
 .material-icons {
   color: white;
+  cursor: pointer;
 }
 .card-quantity {
   color: white;
@@ -27,4 +28,44 @@
     top: 5rem;
     bottom: unset;
   }
+}
+li {
+  list-style: none;
+}
+.basket-list {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50rem;
+  max-width: 95%;
+  box-shadow: inset -1px 3px 8px 5px #0277bd, 2px 5px 16px 0px rgb(1, 7, 92),
+    5px 5px 15px 5px rgba(0, 0, 0, 0);
+  border: none;
+  z-index: 6;
+}
+.icons {
+  color: #0277bd !important;
+
+}
+.collection-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.collection-item-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.basket-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.basket-bg{
+  z-index: 6;
 }
