--- a/src/components/Basket/index.css
+++ b/src/components/Basket/index.css
@@ -44,6 +44,12 @@ li {
   border: none;
   z-index: 6;
   animation: show 1s ease-in-out;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .icons {
   color: #0277bd !important;
